@@ -490,7 +490,7 @@ Array [
   Object {
     "body": Array [
       undefined,
-      "Fee (1.9% + $0.15): $-3.50",
+      "Fee (1.95% + $0.15): $-3.50",
       "Net deposit: $59.50",
     ],
     "date": 2020-04-01T14:37:54.000Z,
