@@ -106,6 +106,7 @@ Please note that our support for the checkout block is still experimental and th
 * Fix - Fix fatal error if store currency is changed after enabled (multi) currencies set.
 * Fix - Use of deprecated call-style to registerPaymentMethods. WooCommerce Payments now requires WooCommerce Blocks of at least version 3.9.0.
 * Fix - Deposit date on Transactions list page.
+* Fix - Rounding error when displaying fee percentages on the Overview and Transactions pages.
 * Add - Error message when total size of dispute evidence files uploaded goes over limit.
 * Update - Pass currency to wc_price when adding intent notes to orders.
 * Update - Instant deposit inbox note wording.
